kubernetes/manifests/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-service
  namespace: vaultwarden
spec:
  selector:
    app: vaultwarden
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
