kubernetes/manifests/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  namespace: vaultwarden
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: warden.kacper-nxn.pl
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: vaultwarden-service
            port:
              number: 80
